# rustdesk-addressbook

./: .env  Cargo.toml
backend/: Cargo.toml
backend/src/: main.rs
backend/src/api/: ab.rs  mod.rs  routes.rs  user.rs
backend/src/repository/: ab.rs  mod.rs  user.rs
backend/src/service/: auth.rs  auth_new.rs  hash.rs  mod.rs  token.rs
common/: Cargo.toml
common/src/: lib.rs  peer.rs  tag.rs  user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20220101_000002_create_table.rs  m20220101_000003_create_table.rs
