[package]
name = "backend"
version = "0.1.0"
edition = "2021"
default-run = "backend"

[dependencies]
actix-files = "0.6"
actix-http = "3"
actix-rt = "2.7"
actix-service = "2"
actix-web = "4"
futures-util = "0.3"
uuid = { version = "1.1.2", features = ["v4"] }
tera = "1.15.0"
dotenv = "0.15"
serde = "1"
serde_json = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
migration = { path = "../migration" }
common = { path = "../common" }
env_logger = "0.9"
log = "0.4"
jsonwebtoken = "8.1.1"
rust-crypto = "0.2.36"
chrono = "0.4"
rust-argon2 = "1.0.0"
rand = "0.8.5"

[dependencies.sea-orm]
version = "^0.8.0"
features = [
  "debug-print",
  "runtime-actix-native-tls",
  # "sqlx-mysql",
  # "sqlx-postgres",
  "sqlx-sqlite",
]
